fix spacing

--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,9 +1,10 @@
 /* Destinations Section */
+
 .destination__container {
   position: relative;
-  display: inline-block;
   width: 1280px;
   height: 600px;
+  padding-top: 75px;
 }
 
 .destination__backgrd-img {
@@ -18,6 +19,7 @@
   color: white;
   font-weight: 800;
   font-size: 4rem;
+  padding-top: 75px;
   padding-left: 90px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -26,7 +28,7 @@
 
 .destination__cards-container {
   position: absolute;
-  top: 5%;
+  top: 10%;
   width: 100%;
   display: flex;
   justify-content: center;
