--- a/css/form.css
+++ b/css/form.css
@@ -77,16 +77,20 @@ button:hover {
 
 /* Thank you Page */
 
+.background-container {
+  padding-top: 100px;
+}
+
 .thankyou-img {
   width: 600px;
-  margin-left: 225px;
+  margin-left: 320px;
   margin-top: 25px;
 }
 
 .confirmation-title {
   font-size: 3rem;
   color: white;
-  margin-left: 330px;
+  margin-left: 420px;
   margin-top: 0;
   margin-bottom: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
